src/FreeFoilTypecheck/SystemF/Parser/Par.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.5).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module FreeFoilTypecheck.SystemF.Parser.Par
  ( happyError
  , myLexer
  , pPattern
  , pTerm3
  , pTerm2
  , pTerm1
  , pTerm
  , pScopedTerm
  ) where

import Prelude

import qualified FreeFoilTypecheck.SystemF.Parser.Abs
import FreeFoilTypecheck.SystemF.Parser.Lex

}

%name pPattern Pattern
%name pTerm3 Term3
%name pTerm2 Term2
%name pTerm1 Term1
%name pTerm Term
%name pScopedTerm ScopedTerm
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '('         { PT _ (TS _ 1)         }
  ')'         { PT _ (TS _ 2)         }
  '+'         { PT _ (TS _ 3)         }
  '-'         { PT _ (TS _ 4)         }
  '->'        { PT _ (TS _ 5)         }
  '.'         { PT _ (TS _ 6)         }
  '..'        { PT _ (TS _ 7)         }
  ':'         { PT _ (TS _ 8)         }
  '='         { PT _ (TS _ 9)         }
  'Bool'      { PT _ (TS _ 10)        }
  'Nat'       { PT _ (TS _ 11)        }
  'Type'      { PT _ (TS _ 12)        }
  '['         { PT _ (TS _ 13)        }
  ']'         { PT _ (TS _ 14)        }
  'do'        { PT _ (TS _ 15)        }
  'else'      { PT _ (TS _ 16)        }
  'false'     { PT _ (TS _ 17)        }
  'for'       { PT _ (TS _ 18)        }
  'forall'    { PT _ (TS _ 19)        }
  'if'        { PT _ (TS _ 20)        }
  'in'        { PT _ (TS _ 21)        }
  'iszero'    { PT _ (TS _ 22)        }
  'let'       { PT _ (TS _ 23)        }
  'then'      { PT _ (TS _ 24)        }
  'true'      { PT _ (TS _ 25)        }
  'Λ'         { PT _ (TS _ 26)        }
  'λ'         { PT _ (TS _ 27)        }
  L_Ident     { PT _ (TV $$)          }
  L_integ     { PT _ (TI $$)          }
  L_UVarIdent { PT _ (T_UVarIdent $$) }

%%

Ident :: { FreeFoilTypecheck.SystemF.Parser.Abs.Ident }
Ident  : L_Ident { FreeFoilTypecheck.SystemF.Parser.Abs.Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

UVarIdent :: { FreeFoilTypecheck.SystemF.Parser.Abs.UVarIdent }
UVarIdent  : L_UVarIdent { FreeFoilTypecheck.SystemF.Parser.Abs.UVarIdent $1 }

Pattern :: { FreeFoilTypecheck.SystemF.Parser.Abs.Pattern }
Pattern
  : Pattern ':' Term { FreeFoilTypecheck.SystemF.Parser.Abs.PatternAsc $1 $3 }

Term3 :: { FreeFoilTypecheck.SystemF.Parser.Abs.Term }
Term3
  : Ident { FreeFoilTypecheck.SystemF.Parser.Abs.EVar $1 }
  | 'true' { FreeFoilTypecheck.SystemF.Parser.Abs.ETrue }
  | 'false' { FreeFoilTypecheck.SystemF.Parser.Abs.EFalse }
  | Integer { FreeFoilTypecheck.SystemF.Parser.Abs.ENat $1 }
  | UVarIdent { FreeFoilTypecheck.SystemF.Parser.Abs.TUVar $1 }
  | 'Nat' { FreeFoilTypecheck.SystemF.Parser.Abs.TNat }
  | 'Bool' { FreeFoilTypecheck.SystemF.Parser.Abs.TBool }
  | 'Type' { FreeFoilTypecheck.SystemF.Parser.Abs.TType }
  | '(' Term ')' { $2 }

Term2 :: { FreeFoilTypecheck.SystemF.Parser.Abs.Term }
Term2
  : Term2 '+' Term3 { FreeFoilTypecheck.SystemF.Parser.Abs.EAdd $1 $3 }
  | Term2 '-' Term3 { FreeFoilTypecheck.SystemF.Parser.Abs.ESub $1 $3 }
  | 'iszero' '(' Term ')' { FreeFoilTypecheck.SystemF.Parser.Abs.EIsZero $3 }
  | Term3 '->' Term2 { FreeFoilTypecheck.SystemF.Parser.Abs.TArrow $1 $3 }
  | Term3 { $1 }

Term1 :: { FreeFoilTypecheck.SystemF.Parser.Abs.Term }
Term1
  : 'if' Term1 'then' Term1 'else' Term1 { FreeFoilTypecheck.SystemF.Parser.Abs.EIf $2 $4 $6 }
  | 'let' Pattern '=' Term1 'in' ScopedTerm { FreeFoilTypecheck.SystemF.Parser.Abs.ELet $2 $4 $6 }
  | 'λ' Pattern '.' ScopedTerm { FreeFoilTypecheck.SystemF.Parser.Abs.EAbsTyped $2 $4 }
  | 'λ' Pattern '.' ScopedTerm { FreeFoilTypecheck.SystemF.Parser.Abs.EAbsUntyped $2 $4 }
  | Term1 Term2 { FreeFoilTypecheck.SystemF.Parser.Abs.EApp $1 $2 }
  | 'Λ' Pattern '.' ScopedTerm { FreeFoilTypecheck.SystemF.Parser.Abs.ETAbs $2 $4 }
  | Term1 '[' Term ']' { FreeFoilTypecheck.SystemF.Parser.Abs.ETApp $1 $3 }
  | 'for' Pattern 'in' '[' Term1 '..' Term1 ']' 'do' ScopedTerm { FreeFoilTypecheck.SystemF.Parser.Abs.EFor $2 $5 $7 $10 }
  | 'forall' Pattern '.' ScopedTerm { FreeFoilTypecheck.SystemF.Parser.Abs.TForAll $2 $4 }
  | Term2 { $1 }

Term :: { FreeFoilTypecheck.SystemF.Parser.Abs.Term }
Term
  : Term1 ':' Term { FreeFoilTypecheck.SystemF.Parser.Abs.ETyped $1 $3 }
  | Term1 { $1 }

ScopedTerm :: { FreeFoilTypecheck.SystemF.Parser.Abs.ScopedTerm }
ScopedTerm
  : Term1 { FreeFoilTypecheck.SystemF.Parser.Abs.ScopedTerm $1 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
