src/FreeFoilTypecheck/SystemF/Parser/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Par.y
-----------------------------------------------------------------------------

state 13 contains 11 shift/reduce conflicts.
state 52 contains 2 shift/reduce conflicts.
state 78 contains 11 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pPattern -> Pattern                         (0)
	%start_pTerm3 -> Term3                             (1)
	%start_pTerm2 -> Term2                             (2)
	%start_pTerm1 -> Term1                             (3)
	%start_pTerm -> Term                               (4)
	%start_pScopedTerm -> ScopedTerm                   (5)
	Ident -> L_Ident                                   (6)
	Integer -> L_integ                                 (7)
	UVarIdent -> L_UVarIdent                           (8)
	Pattern -> Ident                                   (9)
	Pattern -> Ident ':' Term                          (10)
	Term3 -> Ident                                     (11)
	Term3 -> 'true'                                    (12)
	Term3 -> 'false'                                   (13)
	Term3 -> Integer                                   (14)
	Term3 -> UVarIdent                                 (15)
	Term3 -> 'Nat'                                     (16)
	Term3 -> 'Bool'                                    (17)
	Term3 -> 'Type'                                    (18)
	Term3 -> '(' Term ')'                              (19)
	Term2 -> Term2 '+' Term3                           (20)
	Term2 -> Term2 '-' Term3                           (21)
	Term2 -> 'iszero' '(' Term ')'                     (22)
	Term2 -> Term3 '->' Term2                          (23)
	Term2 -> Term3                                     (24)
	Term1 -> 'if' Term1 'then' Term1 'else' Term1      (25)
	Term1 -> 'let' Pattern '=' Term1 'in' ScopedTerm   (26)
	Term1 -> 'λ' Pattern '.' ScopedTerm                (27)
	Term1 -> Term1 Term2                               (28)
	Term1 -> 'Λ' Pattern '.' ScopedTerm                (29)
	Term1 -> Term1 '[' Term ']'                        (30)
	Term1 -> 'for' Pattern 'in' '[' Term1 '..' Term1 ']' 'do' ScopedTerm   (31)
	Term1 -> 'forall' Pattern '.' ScopedTerm           (32)
	Term1 -> Term2                                     (33)
	Term -> Term1 ':' Term                             (34)
	Term -> Term1                                      (35)
	ScopedTerm -> Term1                                (36)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'+'            { PT _ (TS _ 3) }
	'-'            { PT _ (TS _ 4) }
	'->'           { PT _ (TS _ 5) }
	'.'            { PT _ (TS _ 6) }
	'..'           { PT _ (TS _ 7) }
	':'            { PT _ (TS _ 8) }
	'='            { PT _ (TS _ 9) }
	'Bool'         { PT _ (TS _ 10) }
	'Nat'          { PT _ (TS _ 11) }
	'Type'         { PT _ (TS _ 12) }
	'['            { PT _ (TS _ 13) }
	']'            { PT _ (TS _ 14) }
	'do'           { PT _ (TS _ 15) }
	'else'         { PT _ (TS _ 16) }
	'false'        { PT _ (TS _ 17) }
	'for'          { PT _ (TS _ 18) }
	'forall'       { PT _ (TS _ 19) }
	'if'           { PT _ (TS _ 20) }
	'in'           { PT _ (TS _ 21) }
	'iszero'       { PT _ (TS _ 22) }
	'let'          { PT _ (TS _ 23) }
	'then'         { PT _ (TS _ 24) }
	'true'         { PT _ (TS _ 25) }
	'Λ'            { PT _ (TS _ 26) }
	'λ'            { PT _ (TS _ 27) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_UVarIdent    { PT _ (T_UVarIdent $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pPattern rule  0
	%start_pTerm3   rule  1
	%start_pTerm2   rule  2
	%start_pTerm1   rule  3
	%start_pTerm    rule  4
	%start_pScopedTerm rule  5
	Ident           rule  6
	Integer         rule  7
	UVarIdent       rule  8
	Pattern         rules 9, 10
	Term3           rules 11, 12, 13, 14, 15, 16, 17, 18, 19
	Term2           rules 20, 21, 22, 23, 24
	Term1           rules 25, 26, 27, 28, 29, 30, 31, 32, 33
	Term            rules 34, 35
	ScopedTerm      rule  36

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pPattern -> . Pattern                        (rule 0)

	L_Ident        shift, and enter state 7

	Ident          goto state 35
	Pattern        goto state 36

State 1

	%start_pTerm3 -> . Term3                            (rule 1)

	'('            shift, and enter state 15
	'Bool'         shift, and enter state 16
	'Nat'          shift, and enter state 17
	'Type'         shift, and enter state 18
	'false'        shift, and enter state 19
	'true'         shift, and enter state 25
	L_Ident        shift, and enter state 7
	L_integ        shift, and enter state 28
	L_UVarIdent    shift, and enter state 29

	Ident          goto state 8
	Integer        goto state 9
	UVarIdent      goto state 10
	Term3          goto state 34

State 2

	%start_pTerm2 -> . Term2                            (rule 2)

	'('            shift, and enter state 15
	'Bool'         shift, and enter state 16
	'Nat'          shift, and enter state 17
	'Type'         shift, and enter state 18
	'false'        shift, and enter state 19
	'iszero'       shift, and enter state 23
	'true'         shift, and enter state 25
	L_Ident        shift, and enter state 7
	L_integ        shift, and enter state 28
	L_UVarIdent    shift, and enter state 29

	Ident          goto state 8
	Integer        goto state 9
	UVarIdent      goto state 10
	Term3          goto state 11
	Term2          goto state 33

State 3

	%start_pTerm1 -> . Term1                            (rule 3)

	'('            shift, and enter state 15
	'Bool'         shift, and enter state 16
	'Nat'          shift, and enter state 17
	'Type'         shift, and enter state 18
	'false'        shift, and enter state 19
	'for'          shift, and enter state 20
	'forall'       shift, and enter state 21
	'if'           shift, and enter state 22
	'iszero'       shift, and enter state 23
	'let'          shift, and enter state 24
	'true'         shift, and enter state 25
	'Λ'            shift, and enter state 26
	'λ'            shift, and enter state 27
	L_Ident        shift, and enter state 7
	L_integ        shift, and enter state 28
	L_UVarIdent    shift, and enter state 29

	Ident          goto state 8
	Integer        goto state 9
	UVarIdent      goto state 10
	Term3          goto state 11
	Term2          goto state 12
	Term1          goto state 32

State 4

	%start_pTerm -> . Term                              (rule 4)

	'('            shift, and enter state 15
	'Bool'         shift, and enter state 16
	'Nat'          shift, and enter state 17
	'Type'         shift, and enter state 18
	'false'        shift, and enter state 19
	'for'          shift, and enter state 20
	'forall'       shift, and enter state 21
	'if'           shift, and enter state 22
	'iszero'       shift, and enter state 23
	'let'          shift, and enter state 24
	'true'         shift, and enter state 25
	'Λ'            shift, and enter state 26
	'λ'            shift, and enter state 27
	L_Ident        shift, and enter state 7
	L_integ        shift, and enter state 28
	L_UVarIdent    shift, and enter state 29

	Ident          goto state 8
	Integer        goto state 9
	UVarIdent      goto state 10
	Term3          goto state 11
	Term2          goto state 12
	Term1          goto state 30
	Term           goto state 31

State 5

	%start_pScopedTerm -> . ScopedTerm                  (rule 5)

	'('            shift, and enter state 15
	'Bool'         shift, and enter state 16
	'Nat'          shift, and enter state 17
	'Type'         shift, and enter state 18
	'false'        shift, and enter state 19
	'for'          shift, and enter state 20
	'forall'       shift, and enter state 21
	'if'           shift, and enter state 22
	'iszero'       shift, and enter state 23
	'let'          shift, and enter state 24
	'true'         shift, and enter state 25
	'Λ'            shift, and enter state 26
	'λ'            shift, and enter state 27
	L_Ident        shift, and enter state 7
	L_integ        shift, and enter state 28
	L_UVarIdent    shift, and enter state 29

	Ident          goto state 8
	Integer        goto state 9
	UVarIdent      goto state 10
	Term3          goto state 11
	Term2          goto state 12
	Term1          goto state 13
	ScopedTerm     goto state 14

State 6

	Ident -> . L_Ident                                  (rule 6)

	L_Ident        shift, and enter state 7


State 7

	Ident -> L_Ident .                                  (rule 6)

	'('            reduce using rule 6
	')'            reduce using rule 6
	'+'            reduce using rule 6
	'-'            reduce using rule 6
	'->'           reduce using rule 6
	'.'            reduce using rule 6
	'..'           reduce using rule 6
	':'            reduce using rule 6
	'='            reduce using rule 6
	'Bool'         reduce using rule 6
	'Nat'          reduce using rule 6
	'Type'         reduce using rule 6
	'['            reduce using rule 6
	']'            reduce using rule 6
	'else'         reduce using rule 6
	'false'        reduce using rule 6
	'in'           reduce using rule 6
	'iszero'       reduce using rule 6
	'then'         reduce using rule 6
	'true'         reduce using rule 6
	L_Ident        reduce using rule 6
	L_integ        reduce using rule 6
	L_UVarIdent    reduce using rule 6
	%eof           reduce using rule 6


State 8

	Term3 -> Ident .                                    (rule 11)

	'('            reduce using rule 11
	')'            reduce using rule 11
	'+'            reduce using rule 11
	'-'            reduce using rule 11
	'->'           reduce using rule 11
	'.'            reduce using rule 11
	'..'           reduce using rule 11
	':'            reduce using rule 11
	'='            reduce using rule 11
	'Bool'         reduce using rule 11
	'Nat'          reduce using rule 11
	'Type'         reduce using rule 11
	'['            reduce using rule 11
	']'            reduce using rule 11
	'else'         reduce using rule 11
	'false'        reduce using rule 11
	'in'           reduce using rule 11
	'iszero'       reduce using rule 11
	'then'         reduce using rule 11
	'true'         reduce using rule 11
	L_Ident        reduce using rule 11
	L_integ        reduce using rule 11
	L_UVarIdent    reduce using rule 11
	%eof           reduce using rule 11


State 9

	Term3 -> Integer .                                  (rule 14)

	'('            reduce using rule 14
	')'            reduce using rule 14
	'+'            reduce using rule 14
	'-'            reduce using rule 14
	'->'           reduce using rule 14
	'.'            reduce using rule 14
	'..'           reduce using rule 14
	':'            reduce using rule 14
	'='            reduce using rule 14
	'Bool'         reduce using rule 14
	'Nat'          reduce using rule 14
	'Type'         reduce using rule 14
	'['            reduce using rule 14
	']'            reduce using rule 14
	'else'         reduce using rule 14
	'false'        reduce using rule 14
	'in'           reduce using rule 14
	'iszero'       reduce using rule 14
	'then'         reduce using rule 14
	'true'         reduce using rule 14
	L_Ident        reduce using rule 14
	L_integ        reduce using rule 14
	L_UVarIdent    reduce using rule 14
	%eof           reduce using rule 14


State 10

	Term3 -> UVarIdent .                                (rule 15)

	'('            reduce using rule 15
	')'            reduce using rule 15
	'+'            reduce using rule 15
	'-'            reduce using rule 15
	'->'           reduce using rule 15
	'.'            reduce using rule 15
	'..'           reduce using rule 15
	':'            reduce using rule 15
	'='            reduce using rule 15
	'Bool'         reduce using rule 15
	'Nat'          reduce using rule 15
	'Type'         reduce using rule 15
	'['            reduce using rule 15
	']'            reduce using rule 15
	'else'         reduce using rule 15
	'false'        reduce using rule 15
	'in'           reduce using rule 15
	'iszero'       reduce using rule 15
	'then'         reduce using rule 15
	'true'         reduce using rule 15
	L_Ident        reduce using rule 15
	L_integ        reduce using rule 15
	L_UVarIdent    reduce using rule 15
	%eof           reduce using rule 15


State 11

	Term2 -> Term3 . '->' Term2                         (rule 23)
	Term2 -> Term3 .                                    (rule 24)

	'('            reduce using rule 24
	')'            reduce using rule 24
	'+'            reduce using rule 24
	'-'            reduce using rule 24
	'->'           shift, and enter state 51
	'.'            reduce using rule 24
	'..'           reduce using rule 24
	':'            reduce using rule 24
	'='            reduce using rule 24
	'Bool'         reduce using rule 24
	'Nat'          reduce using rule 24
	'Type'         reduce using rule 24
	'['            reduce using rule 24
	']'            reduce using rule 24
	'else'         reduce using rule 24
	'false'        reduce using rule 24
	'in'           reduce using rule 24
	'iszero'       reduce using rule 24
	'then'         reduce using rule 24
	'true'         reduce using rule 24
	L_Ident        reduce using rule 24
	L_integ        reduce using rule 24
	L_UVarIdent    reduce using rule 24
	%eof           reduce using rule 24


State 12

	Term2 -> Term2 . '+' Term3                          (rule 20)
	Term2 -> Term2 . '-' Term3                          (rule 21)
	Term1 -> Term2 .                                    (rule 33)

	'('            reduce using rule 33
	')'            reduce using rule 33
	'+'            shift, and enter state 38
	'-'            shift, and enter state 39
	'.'            reduce using rule 33
	'..'           reduce using rule 33
	':'            reduce using rule 33
	'='            reduce using rule 33
	'Bool'         reduce using rule 33
	'Nat'          reduce using rule 33
	'Type'         reduce using rule 33
	'['            reduce using rule 33
	']'            reduce using rule 33
	'else'         reduce using rule 33
	'false'        reduce using rule 33
	'in'           reduce using rule 33
	'iszero'       reduce using rule 33
	'then'         reduce using rule 33
	'true'         reduce using rule 33
	L_Ident        reduce using rule 33
	L_integ        reduce using rule 33
	L_UVarIdent    reduce using rule 33
	%eof           reduce using rule 33


State 13

	Term1 -> Term1 . Term2                              (rule 28)
	Term1 -> Term1 . '[' Term ']'                       (rule 30)
	ScopedTerm -> Term1 .                               (rule 36)

	'('            shift, and enter state 15
			(reduce using rule 36)

	')'            reduce using rule 36
	'.'            reduce using rule 36
	'..'           reduce using rule 36
	':'            reduce using rule 36
	'='            reduce using rule 36
	'Bool'         shift, and enter state 16
			(reduce using rule 36)

	'Nat'          shift, and enter state 17
			(reduce using rule 36)

	'Type'         shift, and enter state 18
			(reduce using rule 36)

	'['            shift, and enter state 41
			(reduce using rule 36)

	']'            reduce using rule 36
	'else'         reduce using rule 36
	'false'        shift, and enter state 19
			(reduce using rule 36)

	'in'           reduce using rule 36
	'iszero'       shift, and enter state 23
			(reduce using rule 36)

	'then'         reduce using rule 36
	'true'         shift, and enter state 25
			(reduce using rule 36)

	L_Ident        shift, and enter state 7
			(reduce using rule 36)

	L_integ        shift, and enter state 28
			(reduce using rule 36)

	L_UVarIdent    shift, and enter state 29
			(reduce using rule 36)

	%eof           reduce using rule 36

	Ident          goto state 8
	Integer        goto state 9
	UVarIdent      goto state 10
	Term3          goto state 11
	Term2          goto state 40

State 14

	%start_pScopedTerm -> ScopedTerm .                  (rule 5)

	%eof           accept


State 15

	Term3 -> '(' . Term ')'                             (rule 19)

	'('            shift, and enter state 15
	'Bool'         shift, and enter state 16
	'Nat'          shift, and enter state 17
	'Type'         shift, and enter state 18
	'false'        shift, and enter state 19
	'for'          shift, and enter state 20
	'forall'       shift, and enter state 21
	'if'           shift, and enter state 22
	'iszero'       shift, and enter state 23
	'let'          shift, and enter state 24
	'true'         shift, and enter state 25
	'Λ'            shift, and enter state 26
	'λ'            shift, and enter state 27
	L_Ident        shift, and enter state 7
	L_integ        shift, and enter state 28
	L_UVarIdent    shift, and enter state 29

	Ident          goto state 8
	Integer        goto state 9
	UVarIdent      goto state 10
	Term3          goto state 11
	Term2          goto state 12
	Term1          goto state 30
	Term           goto state 50

State 16

	Term3 -> 'Bool' .                                   (rule 17)

	'('            reduce using rule 17
	')'            reduce using rule 17
	'+'            reduce using rule 17
	'-'            reduce using rule 17
	'->'           reduce using rule 17
	'.'            reduce using rule 17
	'..'           reduce using rule 17
	':'            reduce using rule 17
	'='            reduce using rule 17
	'Bool'         reduce using rule 17
	'Nat'          reduce using rule 17
	'Type'         reduce using rule 17
	'['            reduce using rule 17
	']'            reduce using rule 17
	'else'         reduce using rule 17
	'false'        reduce using rule 17
	'in'           reduce using rule 17
	'iszero'       reduce using rule 17
	'then'         reduce using rule 17
	'true'         reduce using rule 17
	L_Ident        reduce using rule 17
	L_integ        reduce using rule 17
	L_UVarIdent    reduce using rule 17
	%eof           reduce using rule 17


State 17

	Term3 -> 'Nat' .                                    (rule 16)

	'('            reduce using rule 16
	')'            reduce using rule 16
	'+'            reduce using rule 16
	'-'            reduce using rule 16
	'->'           reduce using rule 16
	'.'            reduce using rule 16
	'..'           reduce using rule 16
	':'            reduce using rule 16
	'='            reduce using rule 16
	'Bool'         reduce using rule 16
	'Nat'          reduce using rule 16
	'Type'         reduce using rule 16
	'['            reduce using rule 16
	']'            reduce using rule 16
	'else'         reduce using rule 16
	'false'        reduce using rule 16
	'in'           reduce using rule 16
	'iszero'       reduce using rule 16
	'then'         reduce using rule 16
	'true'         reduce using rule 16
	L_Ident        reduce using rule 16
	L_integ        reduce using rule 16
	L_UVarIdent    reduce using rule 16
	%eof           reduce using rule 16


State 18

	Term3 -> 'Type' .                                   (rule 18)

	'('            reduce using rule 18
	')'            reduce using rule 18
	'+'            reduce using rule 18
	'-'            reduce using rule 18
	'->'           reduce using rule 18
	'.'            reduce using rule 18
	'..'           reduce using rule 18
	':'            reduce using rule 18
	'='            reduce using rule 18
	'Bool'         reduce using rule 18
	'Nat'          reduce using rule 18
	'Type'         reduce using rule 18
	'['            reduce using rule 18
	']'            reduce using rule 18
	'else'         reduce using rule 18
	'false'        reduce using rule 18
	'in'           reduce using rule 18
	'iszero'       reduce using rule 18
	'then'         reduce using rule 18
	'true'         reduce using rule 18
	L_Ident        reduce using rule 18
	L_integ        reduce using rule 18
	L_UVarIdent    reduce using rule 18
	%eof           reduce using rule 18


State 19

	Term3 -> 'false' .                                  (rule 13)

	'('            reduce using rule 13
	')'            reduce using rule 13
	'+'            reduce using rule 13
	'-'            reduce using rule 13
	'->'           reduce using rule 13
	'.'            reduce using rule 13
	'..'           reduce using rule 13
	':'            reduce using rule 13
	'='            reduce using rule 13
	'Bool'         reduce using rule 13
	'Nat'          reduce using rule 13
	'Type'         reduce using rule 13
	'['            reduce using rule 13
	']'            reduce using rule 13
	'else'         reduce using rule 13
	'false'        reduce using rule 13
	'in'           reduce using rule 13
	'iszero'       reduce using rule 13
	'then'         reduce using rule 13
	'true'         reduce using rule 13
	L_Ident        reduce using rule 13
	L_integ        reduce using rule 13
	L_UVarIdent    reduce using rule 13
	%eof           reduce using rule 13


State 20

	Term1 -> 'for' . Pattern 'in' '[' Term1 '..' Term1 ']' 'do' ScopedTerm    (rule 31)

	L_Ident        shift, and enter state 7

	Ident          goto state 35
	Pattern        goto state 49

State 21

	Term1 -> 'forall' . Pattern '.' ScopedTerm          (rule 32)

	L_Ident        shift, and enter state 7

	Ident          goto state 35
	Pattern        goto state 48

State 22

	Term1 -> 'if' . Term1 'then' Term1 'else' Term1     (rule 25)

	'('            shift, and enter state 15
	'Bool'         shift, and enter state 16
	'Nat'          shift, and enter state 17
	'Type'         shift, and enter state 18
	'false'        shift, and enter state 19
	'for'          shift, and enter state 20
	'forall'       shift, and enter state 21
	'if'           shift, and enter state 22
	'iszero'       shift, and enter state 23
	'let'          shift, and enter state 24
	'true'         shift, and enter state 25
	'Λ'            shift, and enter state 26
	'λ'            shift, and enter state 27
	L_Ident        shift, and enter state 7
	L_integ        shift, and enter state 28
	L_UVarIdent    shift, and enter state 29

	Ident          goto state 8
	Integer        goto state 9
	UVarIdent      goto state 10
	Term3          goto state 11
	Term2          goto state 12
	Term1          goto state 47

State 23

	Term2 -> 'iszero' . '(' Term ')'                    (rule 22)

	'('            shift, and enter state 46


State 24

	Term1 -> 'let' . Pattern '=' Term1 'in' ScopedTerm    (rule 26)

	L_Ident        shift, and enter state 7

	Ident          goto state 35
	Pattern        goto state 45

State 25

	Term3 -> 'true' .                                   (rule 12)

	'('            reduce using rule 12
	')'            reduce using rule 12
	'+'            reduce using rule 12
	'-'            reduce using rule 12
	'->'           reduce using rule 12
	'.'            reduce using rule 12
	'..'           reduce using rule 12
	':'            reduce using rule 12
	'='            reduce using rule 12
	'Bool'         reduce using rule 12
	'Nat'          reduce using rule 12
	'Type'         reduce using rule 12
	'['            reduce using rule 12
	']'            reduce using rule 12
	'else'         reduce using rule 12
	'false'        reduce using rule 12
	'in'           reduce using rule 12
	'iszero'       reduce using rule 12
	'then'         reduce using rule 12
	'true'         reduce using rule 12
	L_Ident        reduce using rule 12
	L_integ        reduce using rule 12
	L_UVarIdent    reduce using rule 12
	%eof           reduce using rule 12


State 26

	Term1 -> 'Λ' . Pattern '.' ScopedTerm               (rule 29)

	L_Ident        shift, and enter state 7

	Ident          goto state 35
	Pattern        goto state 44

State 27

	Term1 -> 'λ' . Pattern '.' ScopedTerm               (rule 27)

	L_Ident        shift, and enter state 7

	Ident          goto state 35
	Pattern        goto state 43

State 28

	Integer -> L_integ .                                (rule 7)

	'('            reduce using rule 7
	')'            reduce using rule 7
	'+'            reduce using rule 7
	'-'            reduce using rule 7
	'->'           reduce using rule 7
	'.'            reduce using rule 7
	'..'           reduce using rule 7
	':'            reduce using rule 7
	'='            reduce using rule 7
	'Bool'         reduce using rule 7
	'Nat'          reduce using rule 7
	'Type'         reduce using rule 7
	'['            reduce using rule 7
	']'            reduce using rule 7
	'else'         reduce using rule 7
	'false'        reduce using rule 7
	'in'           reduce using rule 7
	'iszero'       reduce using rule 7
	'then'         reduce using rule 7
	'true'         reduce using rule 7
	L_Ident        reduce using rule 7
	L_integ        reduce using rule 7
	L_UVarIdent    reduce using rule 7
	%eof           reduce using rule 7


State 29

	UVarIdent -> L_UVarIdent .                          (rule 8)

	'('            reduce using rule 8
	')'            reduce using rule 8
	'+'            reduce using rule 8
	'-'            reduce using rule 8
	'->'           reduce using rule 8
	'.'            reduce using rule 8
	'..'           reduce using rule 8
	':'            reduce using rule 8
	'='            reduce using rule 8
	'Bool'         reduce using rule 8
	'Nat'          reduce using rule 8
	'Type'         reduce using rule 8
	'['            reduce using rule 8
	']'            reduce using rule 8
	'else'         reduce using rule 8
	'false'        reduce using rule 8
	'in'           reduce using rule 8
	'iszero'       reduce using rule 8
	'then'         reduce using rule 8
	'true'         reduce using rule 8
	L_Ident        reduce using rule 8
	L_integ        reduce using rule 8
	L_UVarIdent    reduce using rule 8
	%eof           reduce using rule 8


State 30

	Term1 -> Term1 . Term2                              (rule 28)
	Term1 -> Term1 . '[' Term ']'                       (rule 30)
	Term -> Term1 . ':' Term                            (rule 34)
	Term -> Term1 .                                     (rule 35)

	'('            shift, and enter state 15
	')'            reduce using rule 35
	'.'            reduce using rule 35
	':'            shift, and enter state 42
	'='            reduce using rule 35
	'Bool'         shift, and enter state 16
	'Nat'          shift, and enter state 17
	'Type'         shift, and enter state 18
	'['            shift, and enter state 41
	']'            reduce using rule 35
	'false'        shift, and enter state 19
	'in'           reduce using rule 35
	'iszero'       shift, and enter state 23
	'true'         shift, and enter state 25
	L_Ident        shift, and enter state 7
	L_integ        shift, and enter state 28
	L_UVarIdent    shift, and enter state 29
	%eof           reduce using rule 35

	Ident          goto state 8
	Integer        goto state 9
	UVarIdent      goto state 10
	Term3          goto state 11
	Term2          goto state 40

State 31

	%start_pTerm -> Term .                              (rule 4)

	%eof           accept


State 32

	%start_pTerm1 -> Term1 .                            (rule 3)
	Term1 -> Term1 . Term2                              (rule 28)
	Term1 -> Term1 . '[' Term ']'                       (rule 30)

	'('            shift, and enter state 15
	'Bool'         shift, and enter state 16
	'Nat'          shift, and enter state 17
	'Type'         shift, and enter state 18
	'['            shift, and enter state 41
	'false'        shift, and enter state 19
	'iszero'       shift, and enter state 23
	'true'         shift, and enter state 25
	L_Ident        shift, and enter state 7
	L_integ        shift, and enter state 28
	L_UVarIdent    shift, and enter state 29
	%eof           accept

	Ident          goto state 8
	Integer        goto state 9
	UVarIdent      goto state 10
	Term3          goto state 11
	Term2          goto state 40

State 33

	%start_pTerm2 -> Term2 .                            (rule 2)
	Term2 -> Term2 . '+' Term3                          (rule 20)
	Term2 -> Term2 . '-' Term3                          (rule 21)

	'+'            shift, and enter state 38
	'-'            shift, and enter state 39
	%eof           accept


State 34

	%start_pTerm3 -> Term3 .                            (rule 1)

	%eof           accept


State 35

	Pattern -> Ident .                                  (rule 9)
	Pattern -> Ident . ':' Term                         (rule 10)

	'.'            reduce using rule 9
	':'            shift, and enter state 37
	'='            reduce using rule 9
	'in'           reduce using rule 9
	%eof           reduce using rule 9


State 36

	%start_pPattern -> Pattern .                        (rule 0)

	%eof           accept


State 37

	Pattern -> Ident ':' . Term                         (rule 10)
